predictors: Don't cancel the request when IO is pending.

In resource_prefetch_predictor, when reading the response of a prefetch
request, the request is marked as failed (and aborted) when the status
is IO_PENDING. This is not intended.

BUG=629424

Review-Url: https://codereview.chromium.org/2188253002
Cr-Commit-Position: refs/heads/master@{#408614}

Former-commit-id: dbcaba59119dd7d4efaf71f4a0ab9e3a410b6e7c